Fix padding on mobile

--- a/app/javascript/packs/components/trainGrid.scss
+++ b/app/javascript/packs/components/trainGrid.scss
@@ -14,4 +14,8 @@
   .train-status-row {
     padding-bottom: 0;
   }
+
+  .row:first-child {
+    padding-top: 0;
+  }
 }
